--- a/pygem_quartz/README
+++ b/pygem_quartz/README
@@ -1,25 +1,34 @@
-To make the "gem" module
-========================
+pygem_quartz is a python wrapper of the gem API using quartz (Capri)
+underneath.
 
-cd Projects/GEM/pygem
+To build a pygem_quartz binary egg:
+cd to the GEM directory (parent dir of pygem_quartz)
+python bld_pygem.py --gemtype=quartz --casroot=<dir containing opencascade> --esp=<dir containing EngSketchPad> --clean --bdist_egg
 
-setenv GEM_ARCH DARWIN       (-or- DARWIN64 -or- LINUX64 -or- WIN32 -or- WIN64)
-setenv GEM_TYPE diamond      (-or- quartz)
-setenv GEM_GRAPHICS gv
 
-make
+Other options to bld_pygem.py include --gv to link in the gv viewer.
 
-To run the "gem" module interactively
-=====================================
+NOTE: When installing into an OpenMDAO environment, make sure to use the
+'plugin install' command to install the egg, because it will automatically
+update the activate script to add any necessary entries to LD_LIBRARY_PATH
+(or equivalent) for you.  Otherwise you'll have to update LD_LIBRARY_PATH
+yourself.
 
-cd test
-   python
-      import gem
 
-      Ctrl-D        (to exit python interpreter)
+To use the "gem" extension interactively 
+(after you've installed the pygem_quartz distribution)
+========================================
 
-To run the "gem" module in batch mode
-=====================================
+python
+>>>from pygem_quartz import gem
+
+... do stuff
+
+Ctrl-d to exit the interpreter when finished
+
+
+To test the "gem" module in batch mode
+======================================
 
 cd test
    python test_gem.py
